--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask~=1.1.2
-SQLAlchemy~=1.3.19
-Werkzeug~=1.0.1
-Pillow~=8.2.0
-WTForms~=2.3.3
-requests~=2.24.0
-selenium~=3.141.0
-bs4~=0.0.1
-beautifulsoup4~=4.9.3
+Flask==1.1.2
+SQLAlchemy==1.3.19
+Werkzeug==1.0.1
+Pillow==8.2.0
+WTForms==2.3.3
+requests==2.24.0
+selenium==3.141.0
+bs4==0.0.1
+beautifulsoup4==4.9.3
